@@ -4,8 +4,10 @@ import edu.fiuba.algo3.modelo.*;
 
 import edu.fiuba.algo3.modelo.Pregunta.*;
 import edu.fiuba.algo3.modelo.Respuesta.Respuesta;
-import edu.fiuba.algo3.modelo.Respuesta.RespuestaMultipleChoiceComun;
-import edu.fiuba.algo3.modelo.Respuesta.RespuestaMultipleChoiceEspecial;
+import edu.fiuba.algo3.modelo.Respuesta.RespuestaMultipleChoiceClasico;
+import edu.fiuba.algo3.modelo.Respuesta.RespuestaMultipleChoiceConPenalidad;
+import edu.fiuba.algo3.modelo.Respuesta.RespuestaMultipleChoiceParcial;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
@@ -15,17 +17,31 @@ import java.util.List;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class PreguntaMultipleChoiceTest {
-/*
+
+    private String enunciado;
+    private ArrayList<String> opciones;
+    private Respuesta respuestaCorrecta;
+    private int idPregunta;
+    private String tema;
+    private String textoRepuesta;
+
+    @BeforeEach
+    public void setUpPregunta() {
+        this.enunciado = "Que paises ganaron mundiales";
+        this.opciones = new ArrayList<>(Arrays.asList("Argentina", "Nigeria", "Suiza", "Francia", "Alemania", "Chile"));
+        this.idPregunta = 182;
+        this.tema = "DEPORTES";
+        this.textoRepuesta = "Argentina, Alemania y Francia fueron campeones mundiales de futbol";
+    }
+
     @Test
-    public void UnaPreguntaDeMultipleChoiceClasicoRecibeUnaListaDeRespuestasYAsignaCorrectamentePuntosALosJugadoresQueRespondieronCorretamente() {
+    public void unaPreguntaMultipleChoiceClasicoRecibeUnaListaDeRespuestasYAsignaCorrectamentePuntosAlResultadoDeLaRonda() {
 
-        String enunciado = "Que paises ganaron mundiales";
-        ArrayList<String> opciones = new ArrayList<>(Arrays.asList("Argentina", "Nigeria", "Suiza", "Francia", "Alemania", "Chile"));
-        Respuesta respuestaCorrecta = new RespuestaMultipleChoiceComun(new ArrayList<>(Arrays.asList(1, 4, 5)));
-        Pregunta pregunta = new PreguntaMultipleChoiceClasico(enunciado, opciones, respuestaCorrecta);
+        this.respuestaCorrecta = new RespuestaMultipleChoiceClasico(new ArrayList<>(Arrays.asList(1, 4, 5)));
+        Pregunta pregunta = new PreguntaMultipleChoiceClasico(idPregunta, tema, enunciado, respuestaCorrecta, opciones, textoRepuesta);
 
-        Respuesta respuestaJugadorUno = new RespuestaMultipleChoiceComun(new ArrayList<>(Arrays.asList(5, 1, 4)));
-        Respuesta respuestaJugadorDos = new RespuestaMultipleChoiceComun(new ArrayList<>(Arrays.asList(1, 5)));
+        Respuesta respuestaJugadorUno = new RespuestaMultipleChoiceClasico(new ArrayList<>(Arrays.asList(5, 1, 4)));
+        Respuesta respuestaJugadorDos = new RespuestaMultipleChoiceClasico(new ArrayList<>(Arrays.asList(1, 5)));
 
         ArrayList<Respuesta> respuestaDeJugadores = new ArrayList<>(Arrays.asList(respuestaJugadorUno, respuestaJugadorDos));
         Resultado resultado = pregunta.responder(respuestaDeJugadores);
@@ -38,16 +54,14 @@ public class PreguntaMultipleChoiceTest {
     }
 
     @Test
-    public void UnaPreguntaDeMultipleChoiceConPenalidadRecibeUnaListaDeRespuestasYAsignaCorrectamentePuntosALosJugadoresQueRespondieronCorretamente() {
+    public void unaPreguntaDeMultipleChoiceConPenalidadRecibeUnaListaDeRespuestasYAsignaCorrectamentePuntosAlResultadoDeLaRonda() {
 
-        String enunciado = "Que paises ganaron mundiales";
-        ArrayList<String> opciones = new ArrayList<>(Arrays.asList("Argentina", "Nigeria", "Suiza", "Francia", "Alemania", "Chile"));
-        Respuesta respuestaCorrecta = new RespuestaMultipleChoiceEspecial(new ArrayList<>(Arrays.asList(1, 4, 5)));
-        Pregunta pregunta = new PreguntaMultipleChoiceConPenalidad(enunciado, opciones, respuestaCorrecta);
+        this.respuestaCorrecta = new RespuestaMultipleChoiceConPenalidad(new ArrayList<>(Arrays.asList(1, 4, 5)));
+        Pregunta pregunta = new PreguntaMultipleChoiceConPenalidad(idPregunta, tema, enunciado, respuestaCorrecta, opciones, textoRepuesta);
 
-        Respuesta respuestaJugadorUno = new RespuestaMultipleChoiceEspecial(new ArrayList<>(Arrays.asList(5, 1, 4)));
-        Respuesta respuestaJugadorDos = new RespuestaMultipleChoiceEspecial(new ArrayList<>(Arrays.asList(1, 5)));
-        Respuesta respuestaJugadorTres = new RespuestaMultipleChoiceEspecial(new ArrayList<>(Arrays.asList(4, 6)));
+        Respuesta respuestaJugadorUno = new RespuestaMultipleChoiceConPenalidad(new ArrayList<>(Arrays.asList(5, 1, 4)));
+        Respuesta respuestaJugadorDos = new RespuestaMultipleChoiceConPenalidad(new ArrayList<>(Arrays.asList(1, 5)));
+        Respuesta respuestaJugadorTres = new RespuestaMultipleChoiceConPenalidad(new ArrayList<>(Arrays.asList(4, 6)));
 
         ArrayList<Respuesta> respuestaDeLosJugadores = new ArrayList<>(Arrays.asList(respuestaJugadorUno, respuestaJugadorDos, respuestaJugadorTres));
         Resultado resultado = pregunta.responder(respuestaDeLosJugadores);
@@ -62,17 +76,15 @@ public class PreguntaMultipleChoiceTest {
     }
 
     @Test
-    public void UnaPreguntaDeMultipleChoiceParcialRecibeUnaListaDeRespuestasYAsignaCorrectamentePuntosALosJugadoresQueRespondieronCorretamente() {
+    public void unaPreguntaDeMultipleChoiceParcialRecibeUnaListaDeRespuestasYAsignaCorrectamentePuntosAlResultadoDeLaRonda() {
 
-        String enunciado = "Que paises ganaron mundiales";
-        ArrayList<String> opciones = new ArrayList<>(Arrays.asList("Argentina", "Nigeria", "Suiza", "Francia", "Alemania", "Chile"));
-        Respuesta respuestaCorrecta = new RespuestaMultipleChoiceEspecial(new ArrayList<>(Arrays.asList(1, 4, 5)));
-        Pregunta pregunta = new PreguntaMultipleChoiceParcial(enunciado, opciones, respuestaCorrecta);
+        this.respuestaCorrecta = new RespuestaMultipleChoiceParcial(new ArrayList<>(Arrays.asList(1, 4, 5)));
+        Pregunta pregunta = new PreguntaMultipleChoiceParcial(idPregunta, tema, enunciado, respuestaCorrecta, opciones, textoRepuesta);
 
-        Respuesta respuestaJugadorUno = new RespuestaMultipleChoiceEspecial(new ArrayList<>(Arrays.asList(5, 1 ,4)));
-        Respuesta respuestaJugadorDos = new RespuestaMultipleChoiceEspecial(new ArrayList<>(List.of(1)));
-        Respuesta respuestaJugadorTres = new RespuestaMultipleChoiceEspecial(new ArrayList<>(Arrays.asList(1, 6, 5)));
-        Respuesta respuestaJugadorCuatro = new RespuestaMultipleChoiceEspecial(new ArrayList<>(Arrays.asList(6, 1, 5, 4)));
+        Respuesta respuestaJugadorUno = new RespuestaMultipleChoiceParcial(new ArrayList<>(Arrays.asList(5, 1 ,4)));
+        Respuesta respuestaJugadorDos = new RespuestaMultipleChoiceParcial(new ArrayList<>(List.of(1)));
+        Respuesta respuestaJugadorTres = new RespuestaMultipleChoiceParcial(new ArrayList<>(Arrays.asList(1, 6, 5)));
+        Respuesta respuestaJugadorCuatro = new RespuestaMultipleChoiceParcial(new ArrayList<>(Arrays.asList(6, 1, 5, 4)));
 
         ArrayList<Respuesta> respuestaDeLosJugadores = new ArrayList<>(Arrays.asList(respuestaJugadorUno, respuestaJugadorDos, respuestaJugadorTres, respuestaJugadorCuatro));
         Resultado resultado = pregunta.responder(respuestaDeLosJugadores);
@@ -86,5 +98,5 @@ public class PreguntaMultipleChoiceTest {
         assertEquals(puntosDelJugadorDos, resultado.obtenerPuntosDelJugador(1));
         assertEquals(puntosDelJugadorTres, resultado.obtenerPuntosDelJugador(2));
         assertEquals(puntosDelJugadorCuatro, resultado.obtenerPuntosDelJugador(3));
-    }*/
+    }
 }
